--- a/app/src/main/res/layout/activity_complain.xml
+++ b/app/src/main/res/layout/activity_complain.xml
@@ -36,7 +36,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/common_google_signin_btn_text_dark_disabled" />
+            android:background="@color/white" />
 
         <EditText
             android:id="@+id/compMobile"
@@ -57,7 +57,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/common_google_signin_btn_text_dark_disabled" />
+            android:background="@color/white" />
 
         <EditText
             android:id="@+id/complains"
@@ -78,7 +78,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/common_google_signin_btn_text_dark_disabled" />
+            android:background="@color/white" />
 
         <Button
             android:id="@+id/comBtn"
