--- a/app/src/main/res/layout/activity_phone_verification.xml
+++ b/app/src/main/res/layout/activity_phone_verification.xml
@@ -8,47 +8,78 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/phoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:orientation="horizontal">
+        android:visibility="visible"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+88 "
-            android:textSize="20dp" />
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/et_phone_number"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone Number" />
+            android:layout_margin="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+88 "
+                android:textSize="20dp" />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/et_phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Phone Number" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_generate_otp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/rounded_shape"
+            android:layout_gravity="center"
+            android:text="Next"
+            android:textColor="#ffff" />
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_generate_otp"
+    <LinearLayout
+        android:id="@+id/verificationCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:background="@color/colorPrimary"
-        android:hint="Next"
-        android:textColor="#ffff" />
+        android:visibility="gone"
+        android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_otp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:clickable="false"
-        android:hint="Enter Verification Code" />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/et_otp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:clickable="false"
+            android:hint="Enter Verification Code" />
 
-    <Button
-        android:id="@+id/btn_sign_in"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:background="@color/colorPrimary"
-        android:hint="Verify"
-        android:textColor="#ffff" />
+        <Button
+            android:id="@+id/btn_sign_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="verify"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:background="@drawable/rounded_shape"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/btnResend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Resend?"
+            android:layout_gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:gravity="center"/>
+
+    </LinearLayout>
 </LinearLayout>
