--- a/app/src/main/res/layout/activity_doctor_search_all.xml
+++ b/app/src/main/res/layout/activity_doctor_search_all.xml
@@ -5,11 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:layout_gravity="center"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyco"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
+
+    <TextView
+        android:id="@+id/txtwarning"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="দুঃখিত!!\n\n আপনার অনুসন্ধানের সাথে সংগতিপূর্ন এমন কোনো তথ্য পাওয়া যায়নি । আবার চেষ্টা করুন । " />
 </LinearLayout>
