--- a/app/src/main/res/layout/activity_doctor__details.xml
+++ b/app/src/main/res/layout/activity_doctor__details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
+    android:background="@color/colorPrimary"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -15,7 +16,8 @@
         android:layout_gravity="center"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:text="Hello"
+        android:textColor="@color/white"
+        android:text=""
         android:textSize="25dp" />
 
     <TextView
@@ -23,52 +25,101 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:text="Hello" />
+        android:text="" />
 
     <TextView
         android:id="@+id/docDesignation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:text="Hello" />
+        android:text="" />
 
     <TextView
         android:id="@+id/docSpeciality"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:text="Hello" />
+        android:text="" />
 
     <TextView
         android:id="@+id/docMobile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:text="Hello" />
+        android:text="" />
 
     <TextView
         android:id="@+id/docEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:text="Hello" />
+        android:text="" />
 
     <TextView
         android:id="@+id/docChamber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/white"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:text="Hello" />
+        android:text="" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/docDistrict"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="District" />
+
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text=", " />
+
+        <TextView
+            android:id="@+id/docDivision"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="Division" />
+
+
+
+    </LinearLayout>
+
 </LinearLayout>
