--- a/app/src/main/res/layout/row_design.xml
+++ b/app/src/main/res/layout/row_design.xml
@@ -5,58 +5,72 @@
     android:layout_width="match_parent"
     android:layout_height="90dp"
     android:layout_marginTop="2dp"
-    android:background="#e4eaea"
+    android:background="@drawable/rounded_shape"
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:weightSum="3">
 
-    <TextView
-        android:id="@+id/docName"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1.2"
-        android:gravity="center"
-        android:text="Hello"
-        android:textSize="25dp" />
-
-    <TextView
-        android:id="@+id/designation"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Hello"
-        android:textSize="18dp" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.75"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:orientation="vertical">
+
 
         <TextView
-            android:id="@+id/district"
+            android:id="@+id/docName"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.2"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="25dp" />
+
+        <TextView
+            android:id="@+id/designation"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="left"
-            android:text="Hello" />
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="18dp" />
 
-        <TextView
-            android:id="@+id/ID"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:gravity="right"
-            android:text="App ID :" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.75"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-        <TextView
-            android:id="@+id/appId"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-            android:gravity="left"
-            android:text="Hello" />
+            <TextView
+                android:id="@+id/district"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:textColor="@color/white"
+                android:text="" />
+
+<!--            <TextView-->
+<!--                android:id="@+id/ID"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.3"-->
+<!--                android:gravity="right"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:text="App ID :" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/appId"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.7"-->
+<!--                android:gravity="left"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:text="Hello" />-->
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
