--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -26,16 +26,17 @@
         <item>ইউরোলজী-বিশেষজ্ঞ</item>
         <item>পরিপাকতন্ত্র-বিশেষজ্ঞ</item>
         <item>কিডনী-রোগ-বিশেষজ্ঞ</item>
-        <item>প্যারালাইসিস বিশেষজ্ঞ</item>
-        <item>হাড়- জোড়া-রোগ-বিশেষজ্ঞ</item>
-        <item>নাক-কান-গলা-রোগ-বিশেষজ্ঞ</item>
+        <item>প্যারালাইসিস-বিশেষজ্ঞ</item>
+        <item>হাড়-জোড়া-রোগ-বিশেষজ্ঞ</item>
+        <item>নাক-কান-গলা-বিশেষজ্ঞ</item>
         <item>চর্ম-এলার্জি-যৌন-রোগ-বিশেষজ্ঞ</item>
+        <item>যৌন-রোগ-বিশেষজ্ঞ</item>
         <item>ল্যাপারোসকপিক-সার্জন</item>
         <item>কনসালটেন্ট-সনোলজিষ্ট</item>
         <item>রেডিওলজী-এন্ড-ইমেজিং-বিশেষজ্ঞ</item>
         <item>জেনারেল-সার্জন</item>
         <item>মাইক্রোবায়োলজী-বিশেষজ্ঞ</item>
-        <item>বিশেষজ্ঞ</item>
-        <item>বিশেষজ্ঞ</item>
+<!--        <item>বিশেষজ্ঞ</item>-->
+<!--        <item>বিশেষজ্ঞ</item>-->
     </array>
 </resources>
