some ui design change

--- a/app/src/main/res/layout/activity_complain.xml
+++ b/app/src/main/res/layout/activity_complain.xml
@@ -47,7 +47,7 @@
             android:drawablePadding="8dp"
             android:gravity="center_vertical"
             android:hint="আপনার মোবাইল নম্বর "
-            android:inputType="textCapWords"
+            android:inputType="number"
             android:maxLines="1"
             android:padding="10dp"
             android:textColor="@color/white"
@@ -68,7 +68,7 @@
             android:drawablePadding="8dp"
             android:gravity="top"
             android:hint="অভিযোগ অথবা উপদেশ"
-            android:inputType="textCapWords"
+            android:inputType="text"
             android:maxLines="1"
             android:padding="10dp"
             android:textColor="@color/white"
