--- a/app/src/main/res/layout/activity_doctor__details.xml
+++ b/app/src/main/res/layout/activity_doctor__details.xml
@@ -17,8 +17,44 @@
         android:layout_marginBottom="5dp"
         android:gravity="center"
         android:textColor="@color/white"
-        android:text=""
+        android:text="Mr. Rifat"
         android:textSize="25dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight=".4"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:text=" ডিগ্রী " />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+    </LinearLayout>
+
+
 
     <TextView
         android:id="@+id/docDegree"
@@ -26,9 +62,43 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/white"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight=".4"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:text=" পদবি " />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/docDesignation"
@@ -36,7 +106,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/white"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="" />
 
@@ -44,11 +114,48 @@
         android:id="@+id/docSpeciality"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_gravity="center"
         android:textColor="@color/white"
         android:layout_marginBottom="5dp"
         android:gravity="center"
         android:text="" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight=".4"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:text=" মোবাইল " />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+    </LinearLayout>
+
+
 
     <TextView
         android:id="@+id/docMobile"
@@ -56,9 +163,43 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/white"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight=".4"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:text=" ইমেইল " />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/docEmail"
@@ -66,9 +207,43 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/white"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight=".4"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:text=" চেম্বার " />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/docChamber"
@@ -76,9 +251,43 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/white"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight=".4"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:text=" কর্মস্থল " />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1.3"
+            android:layout_gravity="center"
+            android:background="@color/white" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
